SERVER-12921 Make sure mongorestore runs cleanup routines on error